assets/css/app.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

/* This file is for your main application CSS */
@font-face {
    font-family: "WorkSans";
    src: url("/fonts/WorkSans-Regular.ttf");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "WorkSans";
    src: url("/fonts/WorkSans-Bold.ttf");
    font-weight: bold;
    font-style: normal;
}

.eg-gradient {
    background-image: linear-gradient(to bottom, #631A61, #551653, #340E33, #010101);
    height: 190px;
}

.dropdown-menu-arrow::before {
    content: "";
    position: absolute;
    top: -5px;
    left: calc(95% - 12px);
    border-width: 0 5px 5px 5px;
    border-style: solid;
    border-color: transparent transparent white transparent;
}

.menu-item {
    @apply block px-4 py-2 text-sm text-white font-brand font-regular
}

.menu-item:hover {
    @apply hover:text-egDark-light
}

form input[type="text"], input[type="email"], input[type="password"] {
    @apply bg-egDark-dark font-brand font-regular text-white text-xs border border-white
}

form input[type="text"], input[type="email"], input[type="password"]:focus {
    @apply focus:outline-none focus:border-egLavender focus:ring-0
}

/* https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-padding-bottom */
.scroller {
    scroll-padding-bottom: 32px;
    scrollbar-gutter: stable;
    scrollbar-color: transparent transparent;
    scrollbar-width: thin;
    transition: scrollbar-color 2s ease-in-out;
}

.scroller:hover {
    scrollbar-color: #3C3B3B transparent;
}

.create-button {
    @apply bg-egPurple border border-white font-brand font-regular text-black text-base
}

.create-button:hover {
    @apply hover:bg-egPurple-dark text-egDark-light border-egDark-light
}

.round-image-padding {
    border-radius: 50%;
    border: 1.5px solid #ffffff;
    padding: 4px;
}

.img-down-arrow::after {
    content: "";
    position: absolute;
    right: -10px;
    top: 45%;
    transform: translateY(-50%);
    border-width: 3px 3px 0 3px;
    border-color: white transparent transparent transparent;
    border-style: solid;
}

